# gnome-system-log

./: Makefile  README.md  complete-l10n.patch  gnome-system-log.spec
src/: Makefile.am  Makefile.in  NEWS  aclocal.m4  config.h.in  configure  configure.ac
src/data/: Makefile.am  Makefile.in  gnome-system-log.desktop.in.in
src/help/: Makefile.am  Makefile.in
src/help/de/: de.po  introduction.page  log-close.page  log-copy.page  log-filter.page  log-search.page  log-view.page  pref-font-size.page
src/help/el/: el.po  index.page  introduction.page  log-close.page  log-copy.page  log-filter.page  log-search.page  log-view.page  pref-font-size.page
src/help/es/: es.po  introduction.page  log-close.page  log-copy.page  log-filter.page  log-search.page  log-view.page  pref-font-size.page
src/help/fr/: fr.po  introduction.page  log-close.page  log-copy.page  log-filter.page  log-search.page  log-view.page  pref-font-size.page
src/help/gl/: log-filter.page
src/help/hu/: hu.po  introduction.page  log-close.page  log-copy.page  log-filter.page  log-search.page  log-view.page  pref-font-size.page
src/help/id/: id.po  index.page  introduction.page  log-close.page  log-copy.page  log-filter.page  log-search.page  log-view.page  pref-font-size.page
src/help/pt_BR/: index.page  introduction.page  log-close.page  log-copy.page  log-filter.page  log-search.page  log-view.page  pref-font-size.page  pt_BR.po
src/help/ru/: index.page  introduction.page  log-close.page  log-copy.page  log-filter.page  log-search.page  log-view.page  pref-font-size.page  ru.po
src/help/sl/: log-filter.page
src/help/zh_CN/: index.page  introduction.page  log-close.page  log-copy.page  log-filter.page  log-search.page  log-view.page  pref-font-size.page
src/libgd/: Makefile.in
src/po/: POTFILES.in  an.po  as.po  be.po  (+51 more)
src/src/: Makefile.am  Makefile.in  logview-app-menu.ui  logview-app.c  logview-app.h  logview-filter-manager.c  logview-findbar.c  logview-findbar.h  logview-gear-menu.ui  logview-log.c  logview-loglist.c  logview-main.c  logview-manager.c  logview-prefs.c  logview-prefs.h  logview-utils.c  logview-utils.h  logview-window.c  logview-window.h  logview-window.ui  logview.gresource.xml
src/src/tests/: Makefile.in  test-reader.c
(+2 files in other folders)
