@YELP_HELP_RULES@

# Module name
HELP_ID = gnome-system-log

# List of figures to be included
HELP_MEDIA = figures/log-viewer-main.png

# List of pages
HELP_FILES = \
	index.page \
	introduction.page \
	log-close.page \
	log-copy.page \
	log-filter.page \
	log-search.page \
	log-view.page \
	pref-font-size.page

# List of translations
HELP_LINGUAS = ca cs de el en_GB es eu fi fr gl hu id it ja ko oc pt_BR ru sl sv uk zh_CN
